# checkmate

./: .gitignore  Makefile.am  checkmate.pc.in  configure.ac
checkmate/: Makefile.am  checkmate.c  checkmate.h  ipc.h  isolate.c  isolate.h  tester.c  tester.h  testset.c  testset.h
checkmate/easy/: easy.c  easy.h
tests/: Makefile.am  main.c  mytests.c  mytests.h
